# iridescence_viewer

./: CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in  FindIridescence.cmake
include/iridescence_viewer/: viewer.h
src/: viewer.cc
